@@ -46,7 +46,6 @@ EPUBFILES = $(addsuffix .epub,$(PACKAGES))
 
 ELS = org-roam-buffer.el
 ELS += org-roam-capture.el
-ELS += org-roam-compat.el
 ELS += org-roam-completion.el
 ELS += org-roam-db.el
 ELS += org-roam.el
