@@ -6,8 +6,9 @@ This fork starts off from Org-roam 1.2.4.
 
 I want the version to be bigger than 1.2.4 so that it never looks like a downgrade. So an arbitrary number it is then.
 
+- Remove =org-roam-compat= as I shouldn't pretend to be compatible
 - Consult org-link-abbrev-alist when creating links ([[https://github.com/kisaragi-hiu/org-roam/commit/15fecc6da54edc4d0f58458b81d0ef7132033f8c][15fecc6]])
-- Merge kisaragi-diary from my config into here and add some improvements
+- Replace org-roam-dailies with kisaragi-diary (originally living in my config, now with some changes) ([[https://github.com/kisaragi-hiu/org-roam/commit/a6021db958f4a3c449a7fd1564e0b0c2b78cfda4][a6021db]], [[https://github.com/kisaragi-hiu/org-roam/commit/011b6087626471b0b4e46dfd3e5b7305166e0b3b][011b608]], [[https://github.com/kisaragi-hiu/org-roam/commit/9b744249ba292e9b8b1ad696e96c471859231681][9b74424]])
   - Also move =k/new-diary-entry= in here (as =kisaragi-diary/new-entry=)
   - Add a user option for where to look for diary entries (instead of hard-coding it to a variable in my Emacs config)
   - Change the naming scheme for functions and variables
